# at_c

./: .clangd  .gitignore  .lazy.lua  CMakeLists.txt  CMakePresets.json  CPackSourceConfig.cmake  README.md  just.template.env  justfile  valgrind.Dockerfile
.github/workflows/: build_source_tests.yaml  c_release.yml  codeql.yml  tests.yaml
cmake/: atclient.cmake  atcommons.cmake  atlogger.cmake  find_cjson.cmake  find_mbedtls.cmake  package_util.cmake
docs/: just.md
examples/desktop/at_talk/src/: main.c
examples/desktop/cram_authenticate/src/: main.c
examples/desktop/crud/: delete.c  get_publickey.c  get_selfkey.c  get_sharedkey.c  put_publickey.c  put_selfkey.c  put_sharedkey.c
examples/desktop/events/: monitor.c  notify.c  resilient_monitor.c
examples/desktop/pkam_authenticate/src/: main.c
examples/desktop/reconnection/: main.c
examples/desktop/repl/include/repl/: args.h
examples/desktop/repl/src/: main.c
examples/desktop/send_enroll_request/src/: main.c
generators/arduino/atsdk/: .clangd  .gitignore  CMakeLists.txt  atsdk.htemplate  atsdk_atsdk.cpptemplate  atsdk_cjson.htemplate  generate.sh  install.sh
generators/arduino/atsdk/lib/: atsdk.h  atsdk_atsdk.cpp  atsdk_cjson.c
tests/functional_tests/: CMakeLists.txt  README.md  config.json
tests/functional_tests/check_docker_readiness/: CMakeLists.txt
tests/functional_tests/check_docker_readiness/src/: main.c
tests/functional_tests/check_docker_readiness/tools/: build.sh
tests/functional_tests/lib/: CMakeLists.txt
tests/functional_tests/lib/include/functional_tests/: config.h  helpers.h
tests/functional_tests/lib/src/: config.c  helpers.c
tests/functional_tests/tests/: test_atclient_connection.c  test_atclient_get_atkeys.c  test_atclient_monitor.c  test_atclient_notify.c  test_atclient_pkam_authenticate.c  test_atclient_publickey.c  test_atclient_selfkey.c  test_atclient_sharedkey.c  test_atclient_utils_find_atserver_address.c  test_atkeys_write.c
tests/functional_tests/tools/: build.sh  clean.sh  ctest.sh
tests/functional_tests/tools/virtualenv/: docker-compose.yaml  start_virtualenv.sh
tests/functional_tests/virtualenv/: pkam_virtualenv.sh  stop_virtualenv.sh
tools/: run_ctest.sh
